--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,62 +21,127 @@
     <link rel="stylesheet"
           href="http://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css">
     <link rel="stylesheet"
-          href="/css/main.css">
-
-    <!--  
-        Stylesheets and Preprocessors
-        ==============================
-
-        You can always bring in CSS files manually with `<link>` tags, or asynchronously
-        using a solution like AMD (RequireJS).  Or, if you like, you can take advantage 
-        of Sails' conventional asset pipeline (boilerplate Gruntfile).
-
-        By default, stylesheets from your `assets/styles` folder are included
-        here automatically (between STYLES and STYLES END). Both CSS (.css) and LESS (.less)
-        are supported. In production, your styles will be minified and concatenated into
-        a single file.
-        
-        To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
-        For example, here are a few things you could do:
-            
-            + Change the order of your CSS files
-            + Import stylesheets from other directories
-            + Use a different or additional preprocessor, like SASS, SCSS or Stylus
-    -->
-
-    <!--STYLES-->
-    
-    <!--STYLES END-->
+          href="https://rawgit.com/Alisa007/PhotoCRUD/master/assets/css/main.css">
 </head>
 
 <body>
-<ng-view></ng-view>
 
 
-<!--
-    Client-side Templates
-    ========================
+<div class="container" ng-controller="PhotoController">
+    <div class="row m-t-3">
+        <div class="col-xs-12">
+            <progress class="progress"
+                      ng-class="{'invisible' : !photo.progress && !form.submitted, 'progress-success' : photo.progress == 100}"
+                      value="{{ photo.progress }}"
+                      max="100">{{ photo.progress }}
+            </progress>
 
-    HTML templates are important prerequisites of modern, rich client applications.
-    To work their magic, frameworks like Backbone, Angular, Ember, and Knockout require
-    that you load these templates client-side.
+            <form class="card">
+                <div class="media">
+                    <div class="media-left media-middle">
+                        <div class="media-object media-box text-xs-center"
+                             ngf-drop ngf-select
+                             ng-model="photo.image"
+                             ngf-pattern="'image/*'"
+                             ngf-accept="'image/*'"
 
-    By default, your Gruntfile is configured to automatically load and precompile
-    client-side JST templates in your `assets/templates` folder, then
-    include them here automatically (between TEMPLATES and TEMPLATES END).
+                             ng-model-rejected="rejFiles"
+                             ngf-drag-over-class="{accept:'drag-success', reject:'drag-danger'}"
+                             ngf-multiple="false"
+                             ngf-allow-dir="false"
+                             ngf-accept="'image/*'"
+                             ngf-drop-available="dropAvailable"
+                             ng-class="{'media-box-success': photo.image, 'media-box-danger': !photo.image && form.submitted}">
 
-    To customize this behavior to fit your needs, just edit `tasks/pipeline.js`.
-    For example, here are a few things you could do:
+                            <div class="m-t-1 m-x-2">
+                                <i class="fa fa-file-image-o fa-3x"
+                                   ng-if="!photo.image && !form.submitted"></i>
+                                <i class="fa fa-times fa-3x"
+                                   ng-if="!photo.image && form.submitted"></i>
+                                <i class="fa fa-check fa-3x"
+                                   ng-if="photo.image"></i>
+                            </div>
 
-        + Import templates from other directories
-        + Use a different template engine (handlebars, jade, dust, etc.)
-        + Internationalize your client-side templates using a server-side
-          stringfile before they're served.
--->
+                            <small>Drag & drop</small>
 
-<!--TEMPLATES-->
-<script type="text/javascript" src="/jst.js"></script>
-<!--TEMPLATES END-->
+                        </div>
+                    </div>
+                    <div class="media-body media-middle" style="width: 100%;">
+
+                        <div
+                                ng-class="{'has-success': photo.name, 'has-danger': !photo.name && form.submitted}">
+                            <input type="text"
+                                   class="form-control"
+                                   placeholder="Image name"
+                                   ng-model="photo.name">
+                        </div>
+                    </div>
+
+                    <div class="media-right media-middle">
+                        <button type="button"
+                                class="m-r-1 btn btn-primary"
+                                ng-click="upload(photo)">
+                            <i class="fa fa-upload"> Upload</i>
+                        </button>
+                    </div>
+                </div>
+            </form>
+
+            <div class="card"
+                 ng-repeat="photo in photos">
+                <div class="media">
+                    <div class="media-left">
+                        <img class="media-object media-img"
+                             ng-src="{{ photo.url }}" alt="{{ photo.name }}">
+                    </div>
+                    <div class="media-body media-middle">
+                        <div ng-if="!photo.editable">
+                            <h3 class="media-heading">{{ photo.name }}</h3>
+                            <p>
+                                {{ photo.createdAt | date: 'shortTime' }} on
+                                {{ photo.createdAt | date: 'longDate' }},
+                                {{ photo.format }}
+                            </p>
+                        </div>
+
+                        <input type="text"
+                               class="form-control"
+                               placeholder="Image name"
+                               ng-model="newPhoto.name"
+                               ng-if="photo.editable">
+                    </div>
+
+                    <div class="media-right media-middle"
+                         ng-if="!photo.editable">
+                        <button type="button"
+                                class="btn btn-primary-outline media-object"
+                                ng-click="edit(photo, $index)">
+                            <i class="fa fa-pencil"></i>
+                        </button>
+                    </div>
+
+                    <div class="media-right media-middle"
+                         ng-if="!photo.editable">
+                        <button type="button"
+                                class="m-r-1 btn btn-danger-outline media-object"
+                                ng-click="delete(photo, $index)">
+                            <i class="fa fa-trash"></i>
+                        </button>
+                    </div>
+
+                    <div class="media-right media-middle"
+                         ng-if="photo.editable">
+                        <button type="button"
+                                class="m-r-1 btn btn-primary-outline media-object"
+                                ng-click="update(photo, newPhoto, $index)">
+                            <i class="fa fa-pencil"> Update</i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -93,33 +158,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/5.0.9/ng-file-upload.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/danialfarid-angular-file-upload/5.0.9/ng-file-upload-shim.min.js"></script>
+<script src="https://rawgit.com/Alisa007/PhotoCRUD/master/assets/js/app.js"></script>
 
-<!--
-
-  Client-side Javascript
-  ========================
-
-  You can always bring in JS files manually with `script` tags, or asynchronously
-  on the client using a solution like AMD (RequireJS).  Or, if you like, you can
-  take advantage of Sails' conventional asset pipeline (boilerplate Gruntfile).
-
-  By default, files in your `assets/js` folder are included here
-  automatically (between SCRIPTS and SCRIPTS END).  Both JavaScript (.js) and
-  CoffeeScript (.coffee) are supported. In production, your scripts will be minified
-  and concatenated into a single file.
-
-  To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
-  For example, here are a few things you could do:
-
-      + Change the order of your scripts
-      + Import scripts from other directories
-      + Use a different preprocessor, like TypeScript
-
--->
-
-<!--SCRIPTS-->
-<script src="/js/app.js"></script>
-<script src="/js/controllers/photo.js"></script>
-<!--SCRIPTS END-->
 </body>
 </html>
