--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,26 +40,24 @@
                 <div class="media">
                     <div class="media-left media-middle">
                         <div class="media-object media-box text-xs-center"
-                             ngf-drop ngf-select
-                             ng-model="photo.image"
-                             ngf-pattern="'image/*'"
+                             type="file"
+                             ngf-drop
+                             ngf-select
+                             ng-model="file"
                              ngf-accept="'image/*'"
 
-                             ng-model-rejected="rejFiles"
-                             ngf-drag-over-class="{accept:'drag-success', reject:'drag-danger'}"
                              ngf-multiple="false"
                              ngf-allow-dir="false"
-                             ngf-accept="'image/*'"
-                             ngf-drop-available="dropAvailable"
-                             ng-class="{'media-box-success': photo.image, 'media-box-danger': !photo.image && form.submitted}">
+
+                             ng-class="{'media-box-success': file, 'media-box-danger': !file && form.submitted}">
 
                             <div class="m-t-1 m-x-2">
                                 <i class="fa fa-file-image-o fa-3x"
-                                   ng-if="!photo.image && !form.submitted"></i>
+                                   ng-if="!file && !form.submitted"></i>
                                 <i class="fa fa-times fa-3x"
-                                   ng-if="!photo.image && form.submitted"></i>
+                                   ng-if="!file && form.submitted"></i>
                                 <i class="fa fa-check fa-3x"
-                                   ng-if="photo.image"></i>
+                                   ng-if="file"></i>
                             </div>
 
                             <small>Drag & drop</small>
