--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,7 +36,7 @@
                       max="100">{{ photo.progress }}
             </progress>
 
-            <form class="card">
+            <div class="card">
                 <div class="media">
                     <div class="media-left media-middle">
                         <div class="media-object media-box text-xs-center"
@@ -78,12 +78,12 @@
                     <div class="media-right media-middle">
                         <button type="button"
                                 class="m-r-1 btn btn-primary"
-                                ng-click="upload(photo)">
+                                ng-click="upload(photo, file)">
                             <i class="fa fa-upload"> Upload</i>
                         </button>
                     </div>
                 </div>
-            </form>
+            </div>
 
             <div class="card"
                  ng-repeat="photo in photos">
